tests/snapshots/run_wpt_conformance__coreml_batchNormalization_default___relu.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js batchNormalization default + relu, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML batchNormalization requires mean parameter to be a constant tensor, not a graph input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f32[4, 6];
    bnMean: f32[6];
    bnVariance: f32[6];
  }

  nodes {
    [operand_3] = batchNormalization(bnInput, bnMean, bnVariance, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
    [output] = relu(operand_3, label="");
  }

  outputs { output; }
}
